issue with skill dialog select menu resolved

--- a/src/main/resources/static/html/courseEdit.html
+++ b/src/main/resources/static/html/courseEdit.html
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav btn-group">
                         <li class="nav-item dropdown" id="menuLogin">
-                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{f_name}}</button>
+                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">  <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i> Welcome, {{f_name}}</button>
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>
                                 <span class="sr-only">Toggle Dropdown</span>
