--- a/src/main/resources/static/html/courseHome.html
+++ b/src/main/resources/static/html/courseHome.html
@@ -40,7 +40,7 @@
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav btn-group">
                         <li class="nav-item dropdown" id="menuLogin">
-                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{f_name}}</button>
+                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;"> <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i> Welcome, {{f_name}}</button>
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>
                                 <span class="sr-only">Toggle Dropdown</span>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </nav>
-    <div class="wrapper">
+    <div class="wrapper" ng-cloak>
         <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2" id="sideList">
             <div class="grid1">
                 <div class="grid1elements">
