--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -49,7 +49,8 @@
                         </div>-->
                     <ul class="nav navbar-nav btn-group">
                         <li class="nav-item dropdown" id="menuLogin">
-                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{name}}</button>
+                            <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">
+                            <i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i> Welcome, {{name}}</button>
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>
                                 <span class="sr-only">Toggle Dropdown</span>
