some UI changes

--- a/src/main/resources/static/html/enrolledskills.html
+++ b/src/main/resources/static/html/enrolledskills.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/manageCourses.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css" media="screen" >
     <link rel="stylesheet" href="../css/angular-material.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color">
     <link rel="stylesheet" href="../css/sweetalert2.min.css">
